--- a/lab17/views/pages/index.ejs
+++ b/lab17/views/pages/index.ejs
@@ -14,6 +14,8 @@
  <div class="jumbotron">
  <h1>This is great</h1>
  <p>Welcome to templating using EJS</p>
+ <h2>Varible</h2>
+ <p><%= tagline %></p>
  </div>
 </main>
 
